[gd_scene load_steps=12 format=3 uid="uid://cc0xho78iwtym"]

[ext_resource type="Script" uid="uid://dnmp0v75nugrh" path="res://script/xpbar.gd" id="1_yoqii"]
[ext_resource type="Texture2D" uid="uid://crrcsgs8ekak0" path="res://Icons/rectangle-shape.png" id="2_p8a8i"]
[ext_resource type="Texture2D" uid="uid://wspankpto0a5" path="res://Icons/parallelogram half.png" id="3_dks6q"]
[ext_resource type="FontFile" uid="uid://dyar6fh26gmft" path="res://Fonts/Inter Extra Bold 800.otf" id="4_sblib"]
[ext_resource type="Texture2D" uid="uid://c2ojrvgk8tya1" path="res://Icons/school-bag.png" id="5_uyk64"]
[ext_resource type="Texture2D" uid="uid://befhixg0rw6hr" path="res://extra_img/BoodLight.png" id="6_p8a8i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6jtp"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rtry8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5anb"]
bg_color = Color(0.230315, 0.230315, 0.230315, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yt8bv"]
bg_color = Color(0.310617, 0.310617, 0.310617, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mgfoj"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="Player_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yoqii")

[node name="Rectangle-shape" type="Sprite2D" parent="."]
modulate = Color(0.355314, 0.355314, 0.355314, 1)
position = Vector2(564.5, 19.5)
scale = Vector2(2.20508, 0.123047)
texture = ExtResource("2_p8a8i")

[node name="ParallelogramHalf" type="Sprite2D" parent="."]
modulate = Color(0.356863, 0.356863, 0.356863, 1)
position = Vector2(1186.75, 21.8252)
rotation = 3.14159
scale = Vector2(0.36877, 0.11852)
texture = ExtResource("3_dks6q")

[node name="XpProgressBar80-100" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 1280.0
offset_top = 47.0
offset_right = 1462.0
offset_bottom = 102.0
rotation = -3.14159
min_value = 80.0
value = 80.0
fill_mode = 1
nine_patch_stretch = true
texture_under = ExtResource("3_dks6q")
texture_progress = ExtResource("3_dks6q")
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(0, 0.771347, 0.771347, 1)

[node name="XpProgressBar0-79" type="TextureProgressBar" parent="."]
layout_mode = 1
offset_top = -25.0
offset_right = 1123.0
offset_bottom = 50.0
max_value = 79.0
nine_patch_stretch = true
texture_under = ExtResource("2_p8a8i")
texture_progress = ExtResource("2_p8a8i")
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(0, 0.772549, 0.772549, 1)

[node name="Xp Demo Slider" type="HSlider" parent="."]
visible = false
layout_mode = 0
offset_left = 903.0
offset_top = 122.0
offset_right = 1265.0
offset_bottom = 159.0

[node name="LabelForXPLevel" type="Label" parent="."]
layout_mode = 0
offset_left = 1141.0
offset_top = 8.0
offset_right = 1186.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("4_sblib")
theme_override_font_sizes/font_size = 20
text = "LV: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HpProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 151.0
offset_top = 20.0
offset_right = 413.0
offset_bottom = 79.0
max_value = 0.0
nine_patch_stretch = true
texture_under = ExtResource("2_p8a8i")
texture_progress = ExtResource("2_p8a8i")
tint_under = Color(0, 0, 0, 1)
tint_progress = Color(0.96329, 0, 0.290727, 1)

[node name="ParallelogramHalf2" type="Sprite2D" parent="."]
modulate = Color(0.673152, 0.740645, 0.786972, 1)
position = Vector2(128, 49.052)
rotation = 3.14159
scale = Vector2(0.0877542, 0.0552292)
texture = ExtResource("3_dks6q")

[node name="HP" type="Label" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = 36.0
offset_right = 154.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_sblib")
theme_override_font_sizes/font_size = 15
text = "HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HP2" type="Label" parent="."]
layout_mode = 0
offset_left = 414.0
offset_top = 37.0
offset_right = 495.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_sblib")
theme_override_font_sizes/font_size = 15
text = "HP / HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hp Demo SliderSlider" type="VSlider" parent="."]
visible = false
layout_mode = 0
offset_left = 821.0
offset_top = 124.0
offset_right = 883.0
offset_bottom = 436.0
max_value = 0.0

[node name="Button" type="Button" parent="Hp Demo SliderSlider"]
visible = false
layout_mode = 0
offset_left = -326.0
offset_top = -1.0
offset_right = 8.0
offset_bottom = 115.0

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1171.0
offset_top = 66.0
offset_right = 1244.0
offset_bottom = 89.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_sblib")
theme_override_font_sizes/font_size = 15
text = "0:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterBackDrop" type="Panel" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 37.0
offset_right = 102.0
offset_bottom = 123.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h6jtp")

[node name="Stage" type="Label" parent="."]
layout_mode = 0
offset_left = 1182.0
offset_top = 48.0
offset_right = 1233.0
offset_bottom = 71.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_sblib")
theme_override_font_sizes/font_size = 15
text = "STAGE
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 70.0
offset_right = 166.0
offset_bottom = 117.0
theme_override_constants/icon_max_width = 25
theme_override_icons/icon = ExtResource("5_uyk64")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rtry8")
theme_override_styles/hover = SubResource("StyleBoxFlat_v5anb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yt8bv")
theme_override_styles/normal = SubResource("StyleBoxFlat_mgfoj")
icon_alignment = 1

[node name="Label" type="Label" parent="Button"]
layout_mode = 0
offset_left = 4.0
offset_top = 1.0
offset_right = 12.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_sblib")
theme_override_font_sizes/font_size = 12
text = "E"

[node name="blood" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("6_p8a8i")
centered = false
metadata/_edit_lock_ = true

[connection signal="value_changed" from="Xp Demo Slider" to="." method="_on_xp_demo_slider_value_changed"]
[connection signal="value_changed" from="Hp Demo SliderSlider" to="." method="_on_hp_demo_slider_slider_value_changed"]
[connection signal="pressed" from="Hp Demo SliderSlider/Button" to="." method="_on_button_pressed"]
